Revision history for {{$dist->name}}

{{$NEXT}}

3.010     2025-07-16 09:04:21-04:00 America/New_York
        - add flog_messages and fmt_event, which return formatted strings
          without logging them

3.009     2025-01-07 21:22:25-05:00 America/New_York
        - added documentation of the enable_stdout and enable_stderr methods,
          added in 2.018

3.008     2024-11-02 16:59:01+00:00 Europe/London
        - log_pid can now be a comma-delimited list of outputs, which is most
          likely useful for setting log_pid to "syslog" only
        - mark "to_file" for removal, probably in Nov 2025

3.007     2023-09-02 20:18:04-04:00 America/New_York
        - add the is_X methods to Proxy as they were on the root logger
          (thanks, Charlie Garrison)
        - in Log::Fmt tests, cope with the slightly different output of
          JSON::PP versus the XS implementations

3.006     2023-08-11 10:58:09-04:00 America/New_York
        - fix a bug in Log::Fmt where an event data value that was a reference
          to a reference to an array was logged as its 0th element, not a
          flogged array reference

3.005     2023-06-08 20:41:02-04:00 America/New_York
        - add parse_event_string_as_hash, which loses duplicate k/v pairs
          but makes life a little easier

3.004     2023-06-05 21:26:03-04:00 America/New_York
        - optimization to parsing of quoted strings (thanks, Rob Mueller)

3.003     2023-06-05 08:10:52-04:00 America/New_York
        - Log::Fmt will now flog ref-refs, meaning you can easily log JSON as
          log event values

3.002     2022-12-06 09:49:34-05:00 America/New_York
        - restore v5.20 compatibility by turning on "postderef" feature
          explicitly

3.001     2022-12-01 11:55:43-05:00 America/New_York
        - no changes, just stable

3.000     2022-11-03 21:29:21-04:00 America/New_York (TRIAL RELEASE)
        - Log::Dispatchouli now requires v5.20, for pair slices